--- a/resources/style.css
+++ b/resources/style.css
@@ -15,4 +15,11 @@
     background-color: white; 
     width: 40px; 
     height: 40PX;
+} 
+
+.pen { 
+    display: inline-block; 
+    width: 40px; 
+    height: 40px; 
+    border: 2px solid black;
 }
